# class_manager

./: .gitlab-ci.yml  README.md  docker-compose.yml  release.sh
.github/workflows/: main.yml
classmanager/: .coverage  .flake8  Dockerfile  Dockerfile.prod  README.md  entrypoint.sh  pyproject.toml
classmanager/application/: config.py  main.py  pydantic.py  utils.py
classmanager/application/api/: assignment.py  auth.py  courses.py  marks.py  ping.py  users.py
classmanager/application/db/: app_models.py  create.sql  database_config.py
classmanager/application/models/: app_models.py
classmanager/migrations/models/: 0_20230925063312_init.py  0_20230929233554_init.py  1_20231018175853_update.py
classmanager/tests/: conftest.py  test_auth.py  test_ping.py
local_dev_tools/: Dockerfile  Dockerfile.db  Dockerfile.dev_app  entrypoint.sh
