[tool.poetry]
name = "application"
version = "0.1.0"
description = ""
authors = ["Tobiloba Ogundiyan <114788338+6ogunt48@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
pydantic-settings = "^2.0.3"
asyncpg = "^0.28.0"
tortoise-orm = "^0.20.0"
gunicorn = "^21.2.0"
bandit = "^1.7.5"
flake8 = "^6.1.0"
httpx = "^0.25.0"
pytest = "^7.4.2"
safety = "^2.3.5"
isort = "^5.12.0"
pytest-cov = "^4.1.0"
black = "^23.9.1"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
